--- a/index.html
+++ b/index.html
@@ -4,8 +4,114 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abner</title>
+    <style>
+        body.page{
+            background-color: #1b1d22;
+            font-family: "Roboto", sans-serif;
+            font-weight: 300;
+            font-size: px;
+            line-height: 44px;
+            color: #999999;
+        }
+        * {
+            text-rendering: optimizeLegibility;
+            margin: 0;
+        }
+        .main{
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .content{
+            /* width: 100%; */
+            max-width: 1080px;
+            padding: 60px 40px 40px;
+            display: flex;
+            align-items: start;
+            justify-content: center;
+            flex-direction: column;
+        }
+        .logo{
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 28px;
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+        }
+        .bio{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            max-width: 100%;
+            margin-bottom: 28px;
+        }
+        .network{
+            display: flex;
+            flex-direction: column;
+            margin-top: auto;
+        }
+        .bio p:first-of-type{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 90%;
+            font-size: 37px;
+            letter-spacing: -1px;
+            line-height: 48px;
+        }
+        .bio p:first-of-type img{
+            max-width: 100px;
+            height: 100%;
+            margin: 15px;
+            border-radius: 100%;
+        }
+        body.page p{
+            margin-bottom: 28px;
+            color: #fff;
+            font-weight: 100;
+        }
+        .bio p{
+            font-size: 30px;
+            line-height: 32px;
+            letter-spacing: 0;
+        }
+        a, a:hover{
+            text-decoration: none;
+            border: none;
+            border-style: none;
+            box-shadow: none;
+            color: #70a4f2;
+            /* font-weight: 700; */
+        }
+    </style>
 </head>
-<body>
-    Hello World!
+<body class="page">
+    <div class="main">
+        <section class="content">
+            <!-- <header class="logo">
+                <h1>
+                Abner
+                </h1>
+            </header> -->
+            <div class="bio">
+                <p>
+                    <span>
+                        Hello! &nbsp; I am
+                        <br>
+                        <strong>Abner</strong>
+                    </span>
+                    <img src="https://cdt3211.top/img/avatar.png" alt="" width="100" height="100">
+                </p>
+                <p>
+                    怕什么真理无穷  进一寸有进一寸的欢喜✨
+                    <br><br>
+                    <a href="https://cdt3211.top" target="_blank">Blog😊</a>
+                    <a href="https://github.com/cdt3211" target="_blank">Github💻</a>
+                </p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
