--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <p>
                     怕什么真理无穷  进一寸有进一寸的欢喜✨
                     <br><br>
-                    <a href="https://cdt3211.top" target="_blank">Blog😊</a>
+                    <a href="https://blog.cdt3211.top" target="_blank">Blog😊</a>
                     <a href="https://github.com/cdt3211" target="_blank">Github💻</a>
                 </p>
             </div>
