--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abner</title>
+    <link rel="stylesheet" href="./public/btn.css">
     <style>
         body.page{
             background-color: #1b1d22;
@@ -25,19 +26,12 @@
             justify-content: center;
         }
         .content{
-            /* width: 100%; */
             max-width: 1080px;
             padding: 60px 40px 40px;
             display: flex;
             align-items: start;
             justify-content: center;
             flex-direction: column;
-        }
-        .logo{
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 28px;
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
         }
         .bio{
             display: flex;
@@ -90,11 +84,6 @@
 <body class="page">
     <div class="main">
         <section class="content">
-            <!-- <header class="logo">
-                <h1>
-                Abner
-                </h1>
-            </header> -->
             <div class="bio">
                 <p>
                     <span>
@@ -107,11 +96,12 @@
                 <p>
                     怕什么真理无穷  进一寸有进一寸的欢喜✨
                     <br><br>
-                    <a href="https://blog.cdt3211.top" target="_blank">Blog😊</a>
-                    <a href="https://github.com/cdt3211" target="_blank">Github💻</a>
+                    <a class="btn" href="https://blog.cdt3211.top" target="_blank">Blog😊</a>
+                    <a class="btn" href="https://github.com/cdt3211" target="_blank">Github💻</a>
                 </p>
             </div>
         </section>
+        
     </div>
 </body>
 </html>
