更新背景色

--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="./public/btn.css">
     <style>
         body.page{
-            background-color: #1b1d22;
+            background-color: #f9f9f9;
             font-family: "Roboto", sans-serif;
             font-weight: 300;
             font-size: px;
-            line-height: 44px;
-            color: #999999;
         }
         * {
             text-rendering: optimizeLegibility;
@@ -26,6 +24,9 @@
             justify-content: center;
         }
         .content{
+            border: 1.5px solid #1c1c1c4e;
+            border-radius: 2rem;
+            box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
             max-width: 1080px;
             padding: 60px 40px 40px;
             display: flex;
@@ -63,7 +64,7 @@
         }
         body.page p{
             margin-bottom: 28px;
-            color: #fff;
+            color: #000000;
             font-weight: 100;
         }
         .bio p{
@@ -96,7 +97,7 @@
                 <p>
                     怕什么真理无穷  进一寸有进一寸的欢喜✨
                     <br><br>
-                    <a class="btn" href="https://blog.cdt3211.top" target="_blank">Blog😊</a>
+                    <a class="btn" href="https://blog.cdt3211.top" target="_blank">Blog✍🏻</a>
                     <a class="btn" href="https://github.com/cdt3211" target="_blank">Github💻</a>
                 </p>
             </div>
