--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             justify-content: center;
         }
         .content{
-            border: 1.5px solid #1c1c1c4e;
+            border: 1.5px solid #dedede;
             border-radius: 2rem;
-            box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px 10px rgba(33, 33, 33, 0.068);
             max-width: 1080px;
             padding: 60px 40px 40px;
             display: flex;
